sort.basic.bubble.AlgBubbleSort1.scala.code


def bubbleSort() {
 
var change:Boolean=false;

do {
  
change=true;  

for(j<-0 to getNombreValeurs()) {
  
  if (plusPetit(j,j+1)==true) {
  		echange(j,j+1);
  		change=true;
  }
    
}





  
  
  
  
  
  
  
} while (change=true)

}